src/objects/Loan_Portfolio__c.object
<CustomObject>
    <fields>
        <fullName>Cutoff_Date__c</fullName>
        <description>This is the cutoff date for payments per the loan sale agreement.</description>
        <inlineHelpText>This is the cutoff date for payments per the loan sale agreement.</inlineHelpText>
        <label>Cutoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchaser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchaser</label>
        <referenceTo>Solar_Loan_Syndication__c</referenceTo>
        <relationshipLabel>Loan Portfolios</relationshipLabel>
        <relationshipName>Loan_Portfolios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sale_Date__c</fullName>
        <description>This is the date that the transaction was closed.  Manual entry by CMC.</description>
        <inlineHelpText>This is the date that the transaction was closed.  Manual entry by CMC.</inlineHelpText>
        <label>Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sale_Price__c</fullName>
        <description>This is the sale price for portfolio at closing.</description>
        <inlineHelpText>This is the sale price for portfolio at closing.</inlineHelpText>
        <label>Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Loan Portfolio</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cutoff_Date__c</columns>
        <columns>Purchaser__c</columns>
        <columns>Sale_Date__c</columns>
        <columns>Sale_Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Loan Portfolio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Portfolios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>